--- a/kernel/src/main/resources/ganymede/shell/magic/Magics.html
+++ b/kernel/src/main/resources/ganymede/shell/magic/Magics.html
@@ -36,10 +36,10 @@
       <tr><th>Name(s)</th><th>Description</th><!--/* <th>Usage</th> */--></tr>
     </thead>
     <tbody>
-      <tr th:each="entry : ${magics.entrySet()}">
-        <td th:text="${entry.key}"/>
-        <td th:text="${entry.value.description}"/>
-        <!--/* <td><pre th:text="${entry.value.usage}"/></td> */-->
+      <tr th:each="row : ${rows}">
+        <td th:text="${row.names}"/>
+        <td th:text="${row.description}"/>
+        <!--/* <td><pre th:text="${row.usage}"/></td> */-->
       </tr>
     </tbody>
   </table>
